<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NearByMap" >    
    <LinearLayout
            			    android:id="@+id/dropdownmenuNearbyMapLinear1"
                			android:layout_width="match_parent"	
		            	    android:layout_height="70dp"
		            	    android:gravity="center_vertical"
    		            	android:orientation="horizontal"
        		       		>
     <Spinner
        android:id="@+id/spr_place_type"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        />
    <Button
        android:id="@+id/btn_find"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/str_btn_find" />
 </LinearLayout>
 <LinearLayout
            			    android:id="@+id/dropdownmenuNearbyMapLinear2"
                			android:layout_width="match_parent"	
		            	    android:layout_height="50dp"
		            	    android:layout_below="@+id/dropdownmenuNearbyMapLinear1"
		            	    android:gravity="center"
    		            	android:orientation="horizontal"
        		       		>

     <Button
         android:id="@+id/dropdownmenuNearbyMapLinearBtn1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/normal" 
         style="@android:attr/buttonBarStyle"
         android:textSize="16sp"/>

     <Button
         android:id="@+id/dropdownmenuNearbyMapLinearBtn2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/terrain"
         style="@android:attr/buttonBarStyle" 
         android:textSize="16sp"/>

     <Button
         android:id="@+id/dropdownmenuNearbyMapLinearBtn3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/satellite" 
         style="@android:attr/buttonBarStyle"
         android:textSize="16sp"/>

     <Button
         android:id="@+id/dropdownmenuNearbyMapLinearBtn4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/hybrid" 
         style="@android:attr/buttonBarStyle"
         android:textSize="16sp"/>

 </LinearLayout>   
    <fragment
        android:id="@+id/map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dropdownmenuNearbyMapLinear2"
        class="com.google.android.gms.maps.SupportMapFragment" />

    
</RelativeLayout>

