<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
            			    android:id="@+id/dropdownmenusitemapLinear1"
                			android:layout_width="match_parent"	
		            	    android:layout_height="40dp"
		            	    android:gravity="center_vertical"
    		            	android:orientation="horizontal"
        		       		>
     
    <Button
        android:id="@+id/btn_sitemapReview"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="@color/wallet_holo_blue_light"
        android:textColor="@color/white"
        android:text="@string/rate_it_here_" />
 </LinearLayout>
 <LinearLayout
            			    android:id="@+id/dropdownmenusitemapLinear2"
                			android:layout_width="match_parent"	
		            	    android:layout_height="50dp"
		            	    android:layout_below="@+id/dropdownmenusitemapLinear1"
		            	    android:gravity="center"
    		            	android:orientation="horizontal"
        		       		>

     <Button
         android:id="@+id/dropdownmenusitemapLinearBtn1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/normal" 
         style="@android:attr/buttonBarStyle"
         android:textSize="16sp"/>

     <Button
         android:id="@+id/dropdownmenusitemapLinearBtn2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/terrain"
         style="@android:attr/buttonBarStyle" 
         android:textSize="16sp"/>

     <Button
         android:id="@+id/dropdownmenusitemapLinearBtn3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/satellite" 
         style="@android:attr/buttonBarStyle"
         android:textSize="16sp"/>

     <Button
         android:id="@+id/dropdownmenusitemapLinearBtn4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/hybrid" 
         style="@android:attr/buttonBarStyle"
         android:textSize="16sp"/>

 </LinearLayout>   
    <fragment
        android:id="@+id/sitemap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dropdownmenusitemapLinear2"
        class="com.google.android.gms.maps.SupportMapFragment" />
    
</RelativeLayout>

