<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:paddingBottom="10dp"
    tools:ignore="NestedWeights,ContentDescription,TooDeepLayout,TooManyViews"
    tools:context=".Signup" >

    <ImageView
    	android:id="@+id/imgViewSignupMain"
    	android:alpha="0.6"
    	android:layout_height="match_parent"
    	android:layout_width="match_parent"
    	android:src="@drawable/food7"
        />
                    
     
    
    <include
        android:id="@+id/toplay"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        layout="@layout/header_final" />
    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/toplay"
        
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/LoginSignupUserMain"
        android:layout_marginTop="15dp"
        
         >
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/LoginSignupUser1"
        android:weightSum="2"
        >
        <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/username"
        android:textSize="20sp"
        
        android:textColor="@color/black"
        android:layout_marginLeft="35dp"
        android:layout_marginBottom="5dp"
           />
     	<LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        
        
        >		
    		<ImageView 
        	android:src="@drawable/username"
        	android:layout_width="30dp"
        	android:layout_height="30dp"/>
			<EditText
        	android:id="@+id/SignupLoginUsereditText1"
        	android:layout_width="fill_parent"
        	android:layout_height="30dp"
      		android:ems="8"
      		android:paddingLeft="3dp"
        	
        	android:background="@drawable/shape_edittext"
        	android:inputType="textPersonName" />
		</LinearLayout>
</LinearLayout>
<LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/LoginSignupUser2"
        android:layout_marginTop="15dp"
        android:weightSum="2"
        >
        <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/password"
        android:textSize="20sp"
        
        android:textColor="@color/black"
        android:layout_marginLeft="35dp"
        android:layout_marginBottom="5dp"
           />
     	<LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        
        
        >		
    		<ImageView 
        	android:src="@drawable/password"
        	android:layout_width="30dp"
        	android:layout_height="30dp"/>
			<EditText
        	android:id="@+id/SignupLoginUsereditText2"
        	android:layout_width="fill_parent"
        	android:layout_height="30dp"
      		android:ems="8"
      		android:paddingLeft="3dp"
        	
        	android:background="@drawable/shape_edittext"
        	android:inputType="textPassword" />
		</LinearLayout>
</LinearLayout>
<LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/LoginSignupUser3"
        android:layout_marginTop="15dp"
        android:weightSum="2"
        >
        <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/name"
        android:textSize="20sp"
        
        android:textColor="@color/black"
        android:layout_marginLeft="35dp"
        android:layout_marginBottom="5dp"
           />
     	<LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        
        
        >		
    		<ImageView 
        	android:src="@drawable/name"
        	android:layout_width="30dp"
        	android:layout_height="30dp"/>
			<EditText
        	android:id="@+id/SignupLoginUsereditText3"
        	android:layout_width="fill_parent"
        	android:layout_height="30dp"
      		android:ems="8"
      		android:paddingLeft="3dp"
        	
        	android:background="@drawable/shape_edittext"
        	android:inputType="textPersonName" />
		</LinearLayout>
</LinearLayout>
<LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/LoginSignupUser4"
        android:layout_marginTop="15dp"
        android:weightSum="2"
        >
        <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/emailid"
        android:textSize="20sp"
        
        android:textColor="@color/black"
        android:layout_marginLeft="35dp"
        android:layout_marginBottom="5dp"
           />
     	<LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        
        
        >		
    		<ImageView 
        	android:src="@drawable/email_icon"
        	android:layout_width="30dp"
        	android:layout_height="30dp"/>
			<EditText
        	android:id="@+id/SignupLoginUsereditText4"
        	android:layout_width="fill_parent"
        	android:layout_height="30dp"
      		android:ems="8"
      		android:paddingLeft="3dp"
        	
        	android:background="@drawable/shape_edittext"
        	android:inputType="textEmailAddress" />
		</LinearLayout>
</LinearLayout>
<LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/LoginSignupUser5"
        android:layout_marginTop="15dp"
        android:weightSum="2"
        >
        <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/contact"
        android:textSize="20sp"
        
        android:textColor="@color/black"
        android:layout_marginLeft="35dp"
        android:layout_marginBottom="5dp"
           />
     	<LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        
        
        >		
    		<ImageView 
        	android:src="@drawable/contact"
        	android:layout_width="30dp"
        	android:layout_height="30dp"/>
			<EditText
        	android:id="@+id/SignupLoginUsereditText5"
        	android:layout_width="fill_parent"
        	android:layout_height="30dp"
      		android:ems="8"
      		android:paddingLeft="3dp"
        	
        	android:background="@drawable/shape_edittext"
        	android:inputType="phone" />
		</LinearLayout>
</LinearLayout>
<LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/LoginSignupUser6"
        android:layout_marginTop="15dp"
        android:weightSum="2"
        >
        <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/address"
        android:textSize="20sp"
        
        android:textColor="@color/black"
        android:layout_marginLeft="35dp"
        android:layout_marginBottom="5dp"
           />
     	<LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        
        
        >		
    		<ImageView 
        	android:src="@drawable/address_icon"
        	android:layout_width="30dp"
        	android:layout_height="30dp"/>
			<EditText
        	android:id="@+id/SignupLoginUsereditText6"
        	android:layout_width="fill_parent"
        	android:layout_height="30dp"
      		android:ems="8"
      		android:paddingLeft="3dp"
        	
        	android:background="@drawable/shape_edittext"
        	android:inputType="textMultiLine" />
		</LinearLayout>
</LinearLayout>
<RelativeLayout 
                        android:layout_width="match_parent"
                        
                        android:id="@+id/relUserSignup1"
                        android:layout_height="wrap_content"
                        
                        >
             <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        
        android:text="@string/display"
        android:textSize="20sp"
        android:id="@+id/SignupUserTextView1"
        android:textColor="@color/black"
        android:layout_marginLeft="35dp"
        android:layout_marginBottom="5dp"
           />
                        <ImageButton 
                            android:id="@+id/imageViewUserSignup1"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:layout_marginLeft="10dp"
                            android:background="@drawable/display_icon"
                            android:layout_below="@+id/SignupUserTextView1"
                            />                        
                    </RelativeLayout>
                    <Button 
                        android:id="@+id/SignupUserSubmiitBtn1"
                        android:layout_gravity="right"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="30dp"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/submit"
                        android:layout_marginTop="10dp"
                        android:textSize="20sp"
                        android:background="@drawable/shape_red"
                        android:textColor="@color/white"/>
</LinearLayout>
</ScrollView>
</RelativeLayout>
